--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "backend": "json-server --watch data/db.json",
     "start": "ng serve",
+    "dev": "ng serve & npm run backend",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
